hphp/hack/test/typecheck/first_class_polymorphism/polymorphic_function_hint_sub_bad.php.exp
ERROR: File "polymorphic_function_hint_sub_bad.php", line 27, characters 15-16:
Invalid argument (Typing[4323])
  File "polymorphic_function_hint_sub_bad.php", line 23, characters 27-27:
  `T` is a constrained type parameter
  File "polymorphic_function_hint_sub_bad.php", line 23, characters 32-36:
  This type constraint is violated
  File "polymorphic_function_hint_sub_bad.php", line 23, characters 32-36:
  Expected `Three`
  File "polymorphic_function_hint_sub_bad.php", line 14, characters 13-13:
  But got `T#1` which corresponds to the rank-2 type parameter `T` in the polymorphic function
ERROR: File "polymorphic_function_hint_sub_bad.php", line 27, characters 15-16:
Invalid argument (Typing[4323])
  File "polymorphic_function_hint_sub_bad.php", line 23, characters 27-27:
  `T` is a constrained type parameter
  File "polymorphic_function_hint_sub_bad.php", line 23, characters 32-36:
  This type constraint is violated
  File "polymorphic_function_hint_sub_bad.php", line 23, characters 32-36:
  Expected `Three`
  File "polymorphic_function_hint_sub_bad.php", line 14, characters 18-20:
  But got `Two`
ERROR: File "polymorphic_function_hint_sub_bad.php", line 34, characters 15-16:
Invalid argument (Typing[4323])
  File "polymorphic_function_hint_sub_bad.php", line 14, characters 13-13:
  `T` is a constrained type parameter
  File "polymorphic_function_hint_sub_bad.php", line 14, characters 28-31:
  This type constraint is violated
  File "polymorphic_function_hint_sub_bad.php", line 30, characters 26-26:
  `T` is a constrained type parameter
  File "polymorphic_function_hint_sub_bad.php", line 30, characters 41-45:
  This type constraint is violated
  File "polymorphic_function_hint_sub_bad.php", line 14, characters 28-31:
  Expected `Four`
  File "polymorphic_function_hint_sub_bad.php", line 30, characters 41-45:
  But got `Three`
ERROR: File "polymorphic_function_hint_sub_bad.php", line 34, characters 15-16:
Invalid argument (Typing[4323])
  File "polymorphic_function_hint_sub_bad.php", line 30, characters 26-26:
  `T` is a constrained type parameter
  File "polymorphic_function_hint_sub_bad.php", line 30, characters 41-45:
  This type constraint is violated
  File "polymorphic_function_hint_sub_bad.php", line 14, characters 13-13:
  Expected `T#1` which corresponds to the rank-2 type parameter `T` in the polymorphic function
  File "polymorphic_function_hint_sub_bad.php", line 30, characters 41-45:
  But got `Three`
